feat: tile cooldown support (#5)
* fix(frontend): missing dynamic config for some values

* feat(backend,common,client): cooldown support wip

* feat(backend,common,client): cooldown support

* ci(common,client): build only the current package on publish

* ci(client): build common and client package on publish

* chore(backend,frontend): updated package versions

* ci(configurations): removed node 18 from matrix

* fix(backend): updated openapi

* fix(backend): updated openapi redocly conf

* build(frontend): added rollupOptions

* docs(backend): migrated to redis gears instead of triggers and functions

* docs(backend): fixed typo

* refactor(backend): hashing cooldown key with sha256 instead of md5

* fix(frontend,backend): mismatch packages
