# packages/common/src/types/index.ts
@@ -1,7 +1,11 @@
+import { Geometry } from 'geojson';
+
 interface LogFn {
   (obj: unknown, msg?: string, ...args: unknown[]): void;
   (msg: string, ...args: unknown[]): void;
 }
+
+type BBox = [number, number, number, number];
 
 export interface ILogger {
   trace?: LogFn;
@@ -31,6 +35,7 @@ export interface TileDetails extends TileParamsWithKit {
   updateCount: number;
   renderCount: number;
   skipCount: number;
+  coolCount: number;
   coordinates: string;
   geoshape: string;
 }
@@ -40,10 +45,12 @@ export interface TileQueryResponse {
   cursor?: number;
 }
 
+export type TileProcessStatus = 'rendered' | 'skipped' | 'cooled';
+
 export interface TileDetailsPayload {
   timestamp: number;
   state?: number;
-  hasSkipped?: boolean;
+  status?: TileProcessStatus;
 }
 
 export interface BaseQueryParams {
@@ -64,4 +71,31 @@ export interface TileQueryParams extends BaseQueryParams {
 export interface KitMetadata {
   [property: string]: string;
   name: string;
+}
+
+export interface Cooldown {
+  duration: number;
+  kits: string[];
+  minZoom: number;
+  maxZoom: number;
+  enabled: boolean;
+  ttl?: number;
+  description?: string;
+  geoshape?: string;
+  createdAt: number;
+  updatedAt: number;
+}
+
+export interface CooldownQueryParams {
+  enabled?: boolean;
+  kits?: string[];
+  minZoom?: number;
+  maxZoom?: number;
+  area?: BBox;
+  from?: number;
+  size?: number;
+}
+
+export interface CooldownCreationRequest<A = BBox | Geometry> extends Omit<Cooldown, 'geoshape' | 'createdAt' | 'updatedAt'> {
+  area?: A;
 }
